@@ -2,15 +2,18 @@ package main.main_game;
 
 import javafx.animation.AnimationTimer;
 import javafx.scene.Group;
+import javafx.scene.Scene;
 import javafx.scene.canvas.Canvas;
 import javafx.scene.canvas.GraphicsContext;
 import javafx.scene.image.Image;
 import javafx.scene.input.KeyCode;
 import javafx.scene.input.KeyEvent;
+import javafx.scene.media.Media;
+import javafx.scene.media.MediaPlayer;
+import javafx.scene.media.AudioClip;
 import javafx.scene.paint.Color;
 import javafx.scene.text.Font;
 
-import javax.sound.sampled.*;
 import java.io.File;
 import java.util.ArrayList;
 import java.util.Iterator;
@@ -26,14 +29,17 @@ public class GameEngine {
     private Image bgImage = new Image("file:assets/game/bg_genre_2.jpg");
     private Image redNoteImage = new Image("file:assets/game/red_note.png");
     private Image blueNoteImage = new Image("file:assets/game/blue_note.png");
-    private Font font = Font.loadFont("file:assets/fonts/Taiko_No_Tatsujin_Official_Font.ttf", 24);
+    private String fontPath = "file:assets/fonts/Taiko_No_Tatsujin_Official_Font.ttf";
+    private Font font = Font.loadFont(fontPath, 24);
 
-    private Clip redClip, blueClip;
+    private AudioClip redClipFX;
+    private AudioClip blueClipFX;
+    private MediaPlayer bgPlayer;
 
     private double bpm = 120.0;
     private double offset = 3.0;
     private final double hitX = 450;
-    private final double noteSpeed = 7.493;
+    private double noteSpeed;
     private final double noteRadius = 32;
 
     private long startNano;
@@ -42,6 +48,16 @@ public class GameEngine {
     private boolean delayStarted = false;
     private boolean gameStarted = false;
     private int currentNoteIndex = 0;
+    private boolean musicActuallyPlaying = false;
+
+    private long lastUpdateTime = 0;
+
+    private int score = 0;
+    private int combo = 0;
+    private int maxCombo = 0;
+
+    private String lastJudgement = "";
+    private long judgementDisplayTime = 0;
 
     public GameEngine() {
         root.getChildren().add(canvas);
@@ -49,7 +65,7 @@ public class GameEngine {
         bpm = ChartParser.bpm;
         offset = ChartParser.offset;
         loadSounds();
-        setupInput();
+        calculateNoteSpeed();
     }
 
     public Group getRoot() {
@@ -57,74 +73,124 @@ public class GameEngine {
     }
 
     private void loadSounds() {
-        redClip = loadClip("assets/main/rednote.wav");
-        blueClip = loadClip("assets/main/bluenote.wav");
-    }
+        redClipFX = new AudioClip(new File("assets/main/rednote.wav").toURI().toString());
+        blueClipFX = new AudioClip(new File("assets/main/bluenote.wav").toURI().toString());
 
-    private Clip loadClip(String path) {
         try {
-            File audioFile = new File(path);
-            AudioInputStream stream = AudioSystem.getAudioInputStream(audioFile);
-            Clip clip = AudioSystem.getClip();
-            clip.open(stream);
-            return clip;
+            Media bgMusic = new Media(new File("assets/game/yoru_ni_kakeru.wav").toURI().toString());
+            bgPlayer = new MediaPlayer(bgMusic);
         } catch (Exception e) {
             e.printStackTrace();
-            return null;
         }
     }
 
-    private void setupInput() {
-        root.setOnKeyPressed((KeyEvent e) -> {
+    private void calculateNoteSpeed() {
+        double travelDistance = 1280 - (hitX + noteRadius);
+        double travelBeats = 4.0;
+        double secondsPerBeat = 60.0 / bpm;
+        double timeToReach = travelBeats * secondsPerBeat;
+        noteSpeed = travelDistance / timeToReach;
+        System.out.printf("noteSpeed: %.4f px/sec (travel %.1f px in %.2f sec)\n", noteSpeed, travelDistance, timeToReach);
+    }
+
+    public void setupInput(Scene scene) {
+        scene.setOnKeyPressed((KeyEvent e) -> {
             if (!gameStarted) return;
 
             if (e.getCode() == KeyCode.F || e.getCode() == KeyCode.J) {
-                playClip(redClip);
+                playClip(redClipFX);
                 checkHit(1);
             } else if (e.getCode() == KeyCode.D || e.getCode() == KeyCode.K) {
-                playClip(blueClip);
+                playClip(blueClipFX);
                 checkHit(2);
             }
         });
     }
 
-    private void playClip(Clip clip) {
+    private void playClip(AudioClip clip) {
         if (clip != null) {
-            clip.stop();
-            clip.setFramePosition(0);
-            clip.start();
+            clip.play();
         }
     }
 
     private void checkHit(int type) {
         if (drumQueue.isEmpty()) return;
-        Drum drum = drumQueue.get(0);
-        double distance = Math.abs(drum.getX() + noteRadius - hitX);
+        Drum drum = drumQueue.getFirst();
         if (drum.getType() != type) return;
-        if (distance <= 30) drumQueue.remove(0);
+
+        double leftEdge = drum.getX();
+        double rightEdge = drum.getX() + 64;
+
+        double perfectLeft = (hitX - 96);
+        double perfectRight = (hitX - 64);
+        double goodLeft = (hitX - 135);
+        double goodRight = (hitX + 45);
+
+        if (leftEdge > goodRight + 32) {
+            return; // Not in the hit zone
+        }
+
+        if (leftEdge >= perfectLeft && leftEdge <= perfectRight) {
+            drumQueue.removeFirst();
+            lastJudgement = "Perfect";
+            judgementDisplayTime = System.currentTimeMillis();
+            combo++;
+            score += 300 + combo * 2;
+        } else if (leftEdge >= goodLeft && rightEdge <= goodRight) {
+            drumQueue.removeFirst();
+            lastJudgement = "Good";
+            judgementDisplayTime = System.currentTimeMillis();
+            combo++;
+            score += 100 + combo * 2;
+        } else {
+            drumQueue.removeFirst();
+            lastJudgement = "Miss";
+            judgementDisplayTime = System.currentTimeMillis();
+            combo = 0;
+            return;
+        }
+
+        if (combo > maxCombo) maxCombo = combo;
     }
 
     public void start() {
-        startNano = System.nanoTime();
         AnimationTimer timer = new AnimationTimer() {
             @Override
             public void handle(long now) {
-                currentTime = (now - startNano) / 1e9;
-
                 if (!delayStarted) {
                     delayStarted = true;
                     delayStartTime = now;
+                    return;
                 }
 
-                if (!gameStarted && (now - delayStartTime) / 1e9 >= offset) {
+                double delayElapsed = (now - delayStartTime) / 1e9;
+
+                if (!gameStarted && delayElapsed >= offset) {
                     gameStarted = true;
+                    if (bgPlayer != null) {
+                        bgPlayer.stop();
+                        bgPlayer.play();
+
+                        bgPlayer.setOnPlaying(() -> {
+                            startNano = System.nanoTime();
+                            lastUpdateTime = startNano;
+                            musicActuallyPlaying = true;
+                            System.out.println("Music started! startNano reset.");
+                        });
+                    }
+                    return;
                 }
 
-                if (gameStarted) {
-                    spawnNotes();
-                    updateDrums();
-                }
+                if (!gameStarted || startNano == 0 || !musicActuallyPlaying) return;
 
+                long nowNano = System.nanoTime();
+                double deltaTime = (nowNano - lastUpdateTime) / 1e9;
+                lastUpdateTime = nowNano;
+
+                currentTime = (nowNano - startNano) / 1e9;
+
+                spawnNotes();
+                updateDrums(deltaTime);
                 render();
             }
         };
@@ -141,12 +207,17 @@ public class GameEngine {
         }
     }
 
-    private void updateDrums() {
+    private void updateDrums(double deltaTime) {
         Iterator<Drum> iter = drumQueue.iterator();
         while (iter.hasNext()) {
             Drum drum = iter.next();
-            drum.move(-noteSpeed);
-            if (drum.getX() + 64 < hitX - 30) iter.remove();
+            drum.move(-noteSpeed * deltaTime);
+            if (drum.getX() + 64 < hitX - 64) {
+                iter.remove();
+//                lastJudgement = "Miss";
+//                judgementDisplayTime = System.currentTimeMillis();
+                combo = 0;
+            }
         }
     }
 
@@ -154,11 +225,33 @@ public class GameEngine {
         gc.clearRect(0, 0, 1280, 720);
         gc.drawImage(bgImage, 0, 0);
 
-        // draw judgement circle
         gc.setStroke(Color.WHITE);
         gc.setLineWidth(3);
         double radius = 32;
+        double radius_2 = radius * 1.5;
         gc.strokeOval(hitX - radius, 200 + 55 - radius, radius * 2, radius * 2);
+        gc.strokeOval(hitX - radius_2, 200 + 55 - radius_2, radius_2 * 2, radius_2 * 2);
+
+//        gc.setStroke(Color.LIME);
+//        gc.strokeRect(hitX - 32, 200 + 55 - 32, 64, 64); // Perfect zone
+//        gc.setStroke(Color.ORANGE);
+//        gc.strokeRect(hitX - 45, 200 + 55 - 45, 90, 90); // Good zone
+
+        gc.setFill(Color.WHITE);
+        gc.setFont(font);
+        gc.fillText("" + score, 30, 210);
+
+        if (combo > 10) {
+            gc.setFill(Color.BLACK);
+            gc.setFont(Font.loadFont(fontPath, 36));
+            gc.fillText("" + combo, 230, 255);
+        }
+
+        if (!lastJudgement.isEmpty() && System.currentTimeMillis() - judgementDisplayTime < 800) {
+            gc.setFill(Color.WHITE);
+            gc.setFont(Font.font(36));
+            gc.fillText(lastJudgement, hitX - 30, 180);
+        }
 
         for (Drum drum : drumQueue) {
             Image img = drum.getType() == 1 ? redNoteImage : blueNoteImage;
@@ -177,9 +270,20 @@ public class GameEngine {
             this.y = y;
         }
 
-        public int getType() { return type; }
-        public double getX() { return x; }
-        public double getY() { return y; }
-        public void move(double dx) { x += dx; }
+        public int getType() {
+            return type;
+        }
+
+        public double getX() {
+            return x;
+        }
+
+        public double getY() {
+            return y;
+        }
+
+        public void move(double dx) {
+            x += dx;
+        }
     }
 }
